--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/material": "^7.0.2",
+    "axios": "^1.8.4",
     "motion": "^12.6.3",
     "next": "15.2.5",
     "react": "^19.0.0",
