--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
     "jsonwebtoken": "^9.0.2",
     "motion": "^12.6.3",
