--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "motion": "^12.6.3",
     "next": "15.2.5",
